src/app/views/shared/workflows/workflows.component.scss
.workflow {
    display: flex;
    align-items: center;
    justify-content: space-between;
    background-color: #fff;
    color: #111;
    height: 80px;
    font-size: 16px;
    border-bottom: 1px solid #ddd;
    >div {
        margin: 0 28px;
    }
    .workflow-type {
        font-size: 28px;
    }
    .workflow-details {
        flex-grow: 2;
        span {
            display: block;
        }
        .workflow-subtitle {
            color: rgb(147, 155, 160);
            display: block;
        }
    }
}

.workflow-header {
    height: 50px;
    background-color: rgb(52, 152, 219);
    color: #fff;
    display: flex;
    align-items: center;
    justify-content: flex-end;
    >div {
        margin: 0 28px;
    }
    .workflow-header-item {
        flex-grow: 3;
    }
    &.ungrouped {
        background-color: rgb(84, 91, 98)
    }
}

.workflow-footer {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    background-color: #fff;
    height: 80px;
    text-align: right;
    padding: 0 20px;
    span {
        background-color: rgb(241, 175, 15);
        color: #111;
        padding: 16px 20px;
        border-radius: 4px;
        margin-left: 5px;
        font-size: 16px;
        text-transform: uppercase;
    }
}

.op-workflow {
    .panel-title {
        text-transform: uppercase;
        margin: 10px 0;
    }
    .workflow-name {
        color: rgb(241, 175, 15);
        font-size: 16px;
    }
    .workflow-details {
        background-color: #111;
        border-radius: 3px;
        color: #fff;
        margin: 20px 0;
        .workflow-detail {
            display: flex;
            align-items: center;
            padding: 20px;
            height: 30px;
            border-bottom: 1px solid #333;
            label {
                color: #939ba0;
                padding-right: 4px;
            }
        }
    }
}

